# demo.edge.qnx.test

./: README.md
poc/REST/: CMakeLists.txt  main.cpp
poc/ffmpeg/: CMakeLists.txt  main.cpp
poc/ffmpeg-rtsp/: CMakeLists.txt  README.md  docker-compose.yml  main.cpp  setup-ffmpeg-env-qnx.sh
poc/ffmpeg-rtsp/docker/: Dockerfile.rtsp-x64  Dockerfile.video
poc/helloworld/: CMakeLists.txt  main.cpp  readme.md
poc/mqtt/: CMakeLists.txt  README.md  main_pub.cpp  main_sub.cpp
poc/mqtt/docker/: docker-compose.yaml
poc/mqtt/mosquitto/lib/: libmosquitto.so.1
poc/rest/: CMakeLists.txt  README.md  main.cpp
poc/rtsp-example/: CMakeLists.txt  README.md  docker-compose.yml
poc/rtsp-example/docker/: Dockerfile.rtsp-x64
poc/rtsp-example/groupsock/: Makefile
poc/rtsp-example/hlsProxy/: live555HLSProxy
poc/rtsp-example/liveMedia/: Makefile  StreamParser.cpp
poc/rtsp-example/mediaServer/: live555MediaServer
poc/rtsp-example/proxyServer/: live555ProxyServer
poc/rtsp-example/src/: RTSPClient.cpp
poc/rtsp-example/testProgs/: MPEG2TransportStreamIndexer  mikeyParse  openRTSP  playSIP  registerRTSPStream  sapWatch  testAMRAudioStreamer  testDVVideoStreamer  testH264VideoStreamer  testH264VideoToHLSSegments  testH264VideoToTransportStream  testH265VideoStreamer  testH265VideoToTransportStream  testMKVSplitter  testMKVStreamer  testMP3Receiver  testMP3Streamer  testMP3Streamer.cpp  testMPEG1or2AudioVideoStreamer  testMPEG1or2ProgramToTransportStream  testMPEG1or2Splitter  testMPEG1or2VideoReceiver  testMPEG1or2VideoStreamer  testMPEG2TransportReceiver  testMPEG2TransportStreamSplitter  testMPEG2TransportStreamTrickPlay  testMPEG2TransportStreamer  testMPEG4VideoStreamer  testMPEG4VideoStreamer.cpp  testOggStreamer  testOnDemandRTSPServer  testRTSPClient  testRelay  testReplicator  testWAVAudioStreamer  vobStreamer
poc/snpe/: CMakeLists.txt  main.cpp  ppyoloe_snpe_engine.cpp  ppyoloe_snpe_engine.h
poc/snpe-resnet/: CMakeLists.txt  main.cpp  snpe.cpp  snpe.h
poc/snpe-resnet/model/: resnet.py
poc/snpe/model/: label_list.txt
poc/udp-video/: CMakeLists.txt  README.md  main.cpp
poc/udp-video/docker/: README.md  udp-sink.sh  udp-src.sh
poc/udp-video/docker/dockerfile/: Dockerfile.buildsvr  Dockerfile.rtspsink  Dockerfile.rtspsrc  Dockerfile.udpsink  Dockerfile.udpsrc
poc/udp-video/embedded/: CMakeLists_embedded.txt  CMakeLists_qnx.txt  main.cpp
toolchain/: qnx710.cmake
